fix: heroes name misalign

--- a/stylesheets/heroes.css
+++ b/stylesheets/heroes.css
@@ -26,7 +26,7 @@
 .heroes {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 32px;
     justify-content: space-evenly;
 }
 
@@ -50,7 +50,7 @@
     object-fit: cover;
     object-position: center top;
     width: 100%;
-    height: 100%;
+    height: 400px;
     border-radius: 0 0 25px 0;
     background-color: var(--grey);
     padding: 10px;
